--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Javasript</title>
+    <title>Tebak Angka | AlifSyahAkbar</title>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -309,7 +309,7 @@
 
     <footer>
         <hr>
-        <p>&copy; 2022 AlifSyahAkbar.</p>
+        <a href="https://alifsyahakbar.github.io/Portofolio.io/" target="_blank">&copy; 2022 AlifSyahAkbar.</a>
     </footer>
 
     <script src="tebakangka.js"></script>
