--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
         <button type="botton" onclick="main()">Mulai</button>
     </div>
 
-    <footer>
+    <div class="footer">
         <hr>
         <a href="https://alifsyahakbar.github.io/Portofolio.io/" target="_blank">&copy; 2022 AlifSyahAkbar.</a>
-    </footer>
+    </div>
 
     <script src="tebakangka.js"></script>
 </body>
